<?xml version="1.0" encoding="utf-8"?>
<resources>
<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
<<<<<<< HEAD

    <!-- sign_up1 strings -->

    <string name="thong_tin_nguoi_kham">Thông tin người khám</string>
    <string name="ho_va_ten_n">Họ và tên*</string>
    <string name="mat_khau">Mật khẩu*</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu*</string>
    <string name="gioi_tinh">Giới tính*</string>
    <string name="toi_dong_y_voi_nhung_dieu_khoan_va_chinh_sach">Tôi đồng ý với những điều khoản và chính sách.</string>
    <string name="ngay_sinh">Ngày sinh*</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="Ma_bao_hiem_xa_hoi">Mã bảo hiểm xã hội*</string>
    <string name="So_can_cuoc_cong_dan">Số căn cước công dân*</string>


    <!--sign_up2_string-->
    <string name="doctors_friends">Doctor\'s Friends</string>
    <string name="ban_cua_bac_si_ung_dung_cho_moi_nguoi_benh">Bạn của bác sĩ - ứng dụng cho mọi người bệnh</string>
    <string name="nhap_so_dien_thoai_de_tiep_tuc">Nhập số điện thoại để tiếp tục</string>
    <string name="hoac_dang_nhap_bang">Hoặc đăng nhập bằng</string>

    <!-- sign_up_ strings -->
    <string name="xac_nhan_otp">Xác nhận OTP</string>
    <string name="vui_long_nhap_ma_otp_duoc_gui_ve_sdt">Vui lòng nhập mã OTP được gửi về SĐT dùng để đăng ký tài khoản</string>
    <string name="khong_nhan_duoc_ma_otp">Không nhận được mã OTP? Gửi lại (01:30s)</string>

    <!-- log_in_string-->
    <string name="dang_nhap">Đăng nhập</string>
>>>>>>> df063515e3a9fa8ecb41c560861c84c9d5b4e750
>>>>>>> ac3941b4c76b3469c341c7a36a3c4033534544f6
    <!-- xemphongkham strings -->


    <string name="tim_kiem">Tìm kiếm</string>
    <string name="chon_phong_kham">Chọn phòng khám</string>
    <string name="de_xuat"> Đề xuất</string>
    <string name="gan_nhat">Gần nhất</string>
    <string name="pho_bien">Phổ biến</string>
    <string name="ten_phong_kham1">Phòng khám Tâm Cẩm</string>
    <string name="dat_lich1">Đặt lịch</string>
    <string name="dia_chi1">123 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>
    <string name="ten_phong_kham2">Phòng khám Cẩm Tâm</string>
    <string name="dat_lich2">Đặt lịch</string>
    <string name="dia_chi2">124 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>
    <string name="ten_phong_kham3">Phòng Khám ABC</string>
    <string name="dat_lich3">Đặt lịch</string>
    <string name="dia_chi3">125 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>
    <string name="ten_phong_kham4">Phòng khám huhuhu</string>
    <string name="dat_lich4">Đặt lịch</string>
    <string name="dia_chi">126 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>

    <!-- xemphongkham1 strings -->

    <string name="khoa_kham">Tim mạch</string>
    <string name="gia_dat_bac_si">500.000đ</string>
    <string name="xem_them1">Xem thêm</string>
    <string name="ten_bac_si_noi_bat">GS.TS.BS Nguyễn Trọng Tâm</string>
    <string name="bac_si_noi_bat">Bác sĩ nổi bật</string>
    <string name="dat_lich5">Đặt lịch</string>
    <string name="thong_tin">Thông tin</string>
    <string name="dat_lich6">Đặt lịch</string>
    <string name="ten_phong_kham5">Phòng khám anh em bạn dì</string>
    <string name="dia_chi5">123 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>

    <string name="thoi_gian_lam_viec">T2-T7: Sáng (7:30-12:00) - Chiều (13:30-18:30)</string>
    <string name="thoi_gian_cuoi_tuan">CN và các ngày lễ: Sáng (7:30-13:30)</string>
    <string name="xem_them">Xem thêm</string>
    <string name="gioi_thieu_pk">Bệnh viện XYZ là một cơ sở y tế tiên tiến và đáng tin cậy, cam kết mang lại chất lượng chăm sóc y tế cao cấp và sự phục vụ tận tâm cho cộng đồng. Với đội ngũ y bác sĩ và nhân viên chuyên nghiệp và giàu kinh nghiệm, chúng tôi đặt mục tiêu đáp ứng tối đa nhu cầu sức khỏe và sự an tâm của bệnh nhân.</string>
    <string name="goi_kham">Gói khám</string>
    <string name="gioi_thieu">Giới thiệu</string>
    <string name="ten_goi_kham1">Sàng lọc ung thư vú và phụ khoa</string>
    <string name="gia_tien_goi_kham1">2.323.000đ</string>
    <string name="ten_goi_kham2">Sàng lọc ung thư vú và phụ khoa</string>
    <string name="gia_tien_goi_kham2">2.323.000đ</string>

    <!-- xemphongkham2 strings -->

    <string name="chon_phong_kham1">Chọn phòng khám</string>
    <string name="tao_ho_so_moi">Tạo hồ sơ mới</string>
    <string name="tuoi">21 tuổi</string>
    <string name="ma_kham_benh">D8-7362</string>
    <string name="ho_va_ten">Hoàng Đình Cẩm</string>

    <!-- tracuudonthuoc strings -->

    <string name="tra_cuu_don_thuoc">Tra cứu đơn thuốc</string>
    <string name="nhac_nho">Vui lòng nhập mã khám bệnh để tìm kiếm đơn thuốc của bạn </string>
    <string name="huy">Hủy</string>
    <string name="xac_nhan">Xác nhận</string>

    <!-- tracuudonthuoc2 strings -->

    <string name="don_thuoc">Đơn thuốc</string>
    <string name="ten_phong_kham6">Phòng khám Tâm Cẩm</string>
    <string name="de_xuat1">Đề xuất</string>
    <string name="gan_nhat1">Gần nhất</string>
    <string name="pho_bien1">Phổ biến</string>
    <string name="ma_kham_benh1">D6-1724</string>
    <string name="ngay_kham1">12/3/2023</string>
    <string name="dia_chi7">126 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>
<<<<<<< HEAD
    <string name="ten_phong_kham7">Phòng khám Tâm Cẩm</string>
    <string name="ma_kham_benh2">D6-1724</string>
    <string name="ngay_kham2">12/3/2023</string>
    <string name="dia_chi6">126 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>
    <string name="phong_kham8">Phòng khám Tâm Cẩm</string>
    <string name="ma_kham_benh3">D6-1724</string>
    <string name="ngay_kham3">12/3/2023</string>
    <string name="dia_chi9">123 V Vit V, Phng 13, Qun 10, TP HCM, Vit Nam</string>
=======
      <string name="ten_phong_kham7">Phòng khám Tâm Cẩm</string>
      <string name="ma_kham_benh2">D6-1724</string>
      <string name="ngay_kham2">12/3/2023</string>
      <string name="dia_chi6">126 Võ Việt Vũ, Phường 13, Quận 10, TP HCM, Việt Nam</string>
      <string name="phong_kham8">Phòng khám Tâm Cẩm</string>
      <string name="ma_kham_benh3">D6-1724</string>
      <string name="ngay_kham3">12/3/2023</string>
      <string name="dia_chi9">123 V Vit V, Phng 13, Qun 10, TP HCM, Vit Nam</string>
>>>>>>> ac3941b4c76b3469c341c7a36a3c4033534544f6
    <string name="app_name">HealthApp</string>
    <string name="doctor_s_fr">Docter Friend</string>
    <string name="nhapsdt">Nhập email để tiếp tục</string>
    <string name="title_activity_otpauthentication">activity_otpauthentication</string>
<<<<<<< HEAD
</resources>
=======
  </resources>
>>>>>>> ac3941b4c76b3469c341c7a36a3c4033534544f6

